--- a/admin/admin.css
+++ b/admin/admin.css
@@ -1,3 +1,11 @@
 .container{
     margin-top: 3rem;
 }
+.add-btn {
+    margin: 2rem;
+}
+
+label{
+    font-weight: 800;
+    text-decoration: underline;
+}
