--- a/style.css
+++ b/style.css
@@ -112,31 +112,17 @@ div.tab-content div:target {
 }
 
 .items img {
-    height: 200px;
     width: 200px;
+    height: 200px;
     float: left;
     border-radius: 50%;
     shape-outside: circle();
     border: 4px solid #FFF;
     box-shadow: 2px 2px 10px 0 rgba(0,0,0,0.2);
     margin: 0 30px 30px 0;
-}
-.img-star{
-    background-repeat: no-repeat;
-    background-size: cover;
+    object-fit: cover;
 }
 
-.angelina{
-    background-image: url("https://i.pinimg.com/originals/41/a8/ee/41a8ee131c1f98b09ca6ba9332017a96.jpg");
-}
-
-.megane{
-    background-image: url("https://fr-academic.com/pictures/frwiki/77/Megan_Fox_7.jpg");
-}
-
-.leonardo{
-    background-image: url("https://fr.web.img5.acsta.net/pictures/15/06/24/14/36/054680.jpg");
-}
 
 /* -------------****---------- Responsive ------------*****------------  */
 
